--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/jmustat/jmustat.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: ""
-sidebar-avatar: /img/avatar-m     # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/Jinjian.JPG    # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
