--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jinjian Mu | 牟金键
 SEOTitle: Jinjian Mu | 牟金键
-header-img: img/post-bg-desk.jpg
+#header-img: img/post-bg-desk.jpg
 email: jinjianmu92@gmail.com
 description: ""
 keyword: ""
