--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,13 @@ RSS: false
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
-paginate: 10
-paginate_path: "/blog/page:num/"
+paginate_multiple:
+  - paginate: 10
+    paginate_path: '/blog/page:num/'
+    sub_dir: '/_posts'
+  - paginate: 10
+    paginate_path: '/tutorial/page:num/'
+    sub_dir: '/_tutorials'
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
