--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "http://jinjian-mu.com"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/jmustat/jmustat.github.io.git" # you code repository
 
+
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: ""
@@ -21,19 +22,19 @@ RSS: false
 #github_username:    jmustat
 
 
-
-
+collections:
+  posts:
+    output: true
+    permalink: /blog/:path/
+  tutorial:
+    output: true
+    permalink: /tutorial/:path/
+    
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
-permalink: pretty
-paginate_multiple:
-  - paginate: 10
-    paginate_path: '/blog/page:num/'
-    sub_dir: '/blog'
-  - paginate: 10
-    paginate_path: '/tutorial/page:num/'
-    sub_dir: '/tutorial'
+#permalink: pretty
+paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
