--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ collections:
   posts:
     output: true
     permalink: /blog/:path/
-  tutorial:
+  tutorials:
     output: true
     permalink: /tutorial/:path/
     
