--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Jinjian Mu | 牟金键
-SEOTitle: Jinjian Mu | 牟金键
+SEOTitle: Jinjian Mu
 #header-img: img/post-bg-desk.jpg
 email: jinjianmu92@gmail.com
 description: ""
