--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Jinjian Mu | 牟金键
 SEOTitle: Jinjian Mu
-#header-img: img/post-bg-desk.jpg
+header-img: img/head_home.jpeg
 email: jinjianmu92@gmail.com
 description: ""
 keyword: ""
