--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: jinjianmu
+disqus_username: disqus_MFMG3nVJGa
 
 # Gitalk
 #gitalk:
