--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ gitalk:
 # ba_track_id:
 
 # Google Analytics
-# ga_track_id:           # Format: UA-xxxxxx-xx
-# ga_domain: auto              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ ga_track_id:  G-S6SDF5D3NR         # Format: UA-xxxxxx-xx
+ ga_domain: jinjian-mu.com              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
