--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,8 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: disqus_MFMG3nVJGa
+disqus_username: disqus_MFMG3nVJGa
+
 
 # Gitalk
 gitalk:
@@ -106,14 +107,5 @@ service-worker: true
      {
         title: "Zhe Wang",
         href: "http://zhewangdenison.github.io"
-#    },{
-#        title: "简书·BY",
-#        href: "http://www.jianshu.com/u/e71990ada2fd"
-#    },{
-#        title: "Apple",
-#        href: "https://apple.com"
-#    },{
-#        title: "Apple Developer",
-#        href: "https://developer.apple.com/"
     }
 ]
