--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ disqus_username:  disqus_MFMG3nVJGa
 # ba_track_id:
 
 # Google Analytics
-# ga_track_id:  'UA-194758575-1'        # Format: UA-xxxxxx-xx
-# ga_domain:  jinjian-mu.com          # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_track_id:  'UA-194758575-1'        # Format: UA-xxxxxx-xx
+ga_domain:  jinjian-mu.com          # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
