--- a/_config.yml
+++ b/_config.yml
@@ -66,14 +66,14 @@ disqus_username:  jinjianmu
 
 
 # Gitalk
-#gitalk:
-#  enable: true    #是否开启Gitalk评论
-#  clientID: 4c73b723eb65d369f4af                          #生成的clientID
-#  clientSecret: e4dc7360dd1b56e8a73b0052c655741d1036a117   #生成的clientSecret
-#  repo: jmustat.github.io    #仓库名称
-#  owner: jmustat   #github用户名
-#  admin: jmustat
-#  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+gitalk:
+  enable: true    #是否开启Gitalk评论
+  clientID: ed8049352936147c0472                         #生成的clientID
+  clientSecret: dbecd38be7c81f6d0b37ae4fceded84753de8f26   #生成的clientSecret
+  repo: webcomments    #仓库名称
+  owner: jmustat   #github用户名
+  admin: jmustat
+  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
