--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ collections:
   posts:
     output: true
     permalink: /blog/:path/
-#  tutorials:
-#    output: true
-#    permalink: /tutorial/:path/
+  tutorials:
+    output: true
+    permalink: /tutorial/:path/
     
 
 # Build settings
