--- a/_config.yml
+++ b/_config.yml
@@ -108,5 +108,8 @@ friends: [
         title: "Zhe Wang",
         href: "http://zhewangdenison.github.io/"
      }
-     
+     {
+        title: "Chaoran Hu",
+        href: "https://chaoranhu.github.io/"
+     }
 ]
